// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginSocialButtons /> renders all buttons 1`] = `
Array [
  <div
    className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div>
    <p
      className="sc-bcXGCL iaoAwF cap-text"
    >
      <p>
        fc-title
      </p>
    </p>
    <div
      className="LoginSocialButton__FranceConnectButton-kceRhc eGEJbA"
      justifyContent="start"
    >
      <a
        href="/login/franceconnect?_destination=http://localhost/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        title="FranceConnect"
      >
        <span
          className="loginIcon"
          style={
            Object {
              "lineHeight": "inherit",
            }
          }
        >
          <IconMock
            aria-hidden={true}
            className="icon"
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
          />
        </span>
      </a>
    </div>
    <div
      className="LoginSocialButton__FranceConnectLink-kmcAnK jhMZGY"
      justifyContent="start"
    >
      <a
        href="https://franceconnect.gouv.fr/"
        rel="noreferrer"
        target="_blank"
      >
        what-is-fc
      </a>
      <div
        className="sc-bcXGCL fjhhPS cap-text"
      >
        login.or
      </div>
    </div>
  </div>,
  <div>
    <div
      className="LoginSocialButton__LinkButton-fvqpxH lmZlUO"
      type="openId"
    >
      <span
        className="loginIcon"
        style={
          Object {
            "lineHeight": "inherit",
          }
        }
      >
        <IconMock
          aria-hidden={true}
          className="icon"
          style={
            Object {
              "flexShrink": "0",
              "verticalAlign": "middle",
            }
          }
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/sso/switch-user"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>,
  <div>
    <div
      className="LoginSocialButton__LinkButton-fvqpxH eqwdVf"
      type="cas"
    >
      <span
        className="loginIcon"
        style={
          Object {
            "lineHeight": "inherit",
          }
        }
      >
        <IconMock
          aria-hidden={true}
          className="icon"
          style={
            Object {
              "flexShrink": "0",
              "verticalAlign": "middle",
            }
          }
        />
      </span>
      <a
        href="/login-cas?_destination=http://localhost/"
        title="cas"
      >
        <span>
          Cap Collectif CAS Provider
        </span>
      </a>
    </div>
  </div>,
  <div>
    <div
      className="LoginSocialButton__LinkButton-fvqpxH iuXntC"
      type="saml"
    >
      <span
        className="loginIcon"
        style={
          Object {
            "lineHeight": "inherit",
          }
        }
      >
        <IconMock
          aria-hidden={true}
          className="icon"
          style={
            Object {
              "flexShrink": "0",
              "verticalAlign": "middle",
            }
          }
        />
      </span>
      <a
        href="/login-saml?_destination=http://localhost/"
        title="saml"
      >
        Saml
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL eMJBtW"
  />,
]
`;

exports[`<LoginSocialButtons /> renders nothing 1`] = `
<div
  className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
/>
`;

exports[`<LoginSocialButtons /> renders only CAS button 1`] = `
Array [
  <div
    className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="LoginSocialButton__LinkButton-fvqpxH dHQArX"
      type="cas"
    >
      <span
        className="loginIcon"
        style={
          Object {
            "lineHeight": "inherit",
          }
        }
      >
        <IconMock
          aria-hidden={true}
          className="icon"
          style={
            Object {
              "flexShrink": "0",
              "verticalAlign": "middle",
            }
          }
        />
      </span>
      <a
        href="/login-cas?_destination=http://localhost/"
        title="cas"
      >
        <span>
          Cap Collectif CAS Provider
        </span>
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL eMJBtW"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only Facebook button 1`] = `
Array [
  <div
    className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="LoginSocialButton__LinkButton-fvqpxH dRLhxE"
      type="facebook"
    >
      <span
        className="loginIcon"
        style={
          Object {
            "lineHeight": "inherit",
          }
        }
      >
        <IconMock
          aria-hidden={true}
          className="icon"
          style={
            Object {
              "flexShrink": "0",
              "verticalAlign": "middle",
            }
          }
        />
      </span>
      <a
        href="/login/facebook?_destination=http://localhost/"
        title="facebook"
      >
        Facebook
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL eMJBtW"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only FranceConnect button 1`] = `
Array [
  <div
    className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div>
    <p
      className="sc-bcXGCL iaoAwF cap-text"
    >
      <p>
        fc-title
      </p>
    </p>
    <div
      className="LoginSocialButton__FranceConnectButton-kceRhc eGEJbA"
      justifyContent="start"
    >
      <a
        href="/login/franceconnect?_destination=http://localhost/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        title="FranceConnect"
      >
        <span
          className="loginIcon"
          style={
            Object {
              "lineHeight": "inherit",
            }
          }
        >
          <IconMock
            aria-hidden={true}
            className="icon"
            style={
              Object {
                "flexShrink": "0",
                "verticalAlign": "middle",
              }
            }
          />
        </span>
      </a>
    </div>
    <div
      className="LoginSocialButton__FranceConnectLink-kmcAnK jhMZGY"
      justifyContent="start"
    >
      <a
        href="https://franceconnect.gouv.fr/"
        rel="noreferrer"
        target="_blank"
      >
        what-is-fc
      </a>
      <div
        className="sc-bcXGCL fjhhPS cap-text"
      >
        login.or
      </div>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL eMJBtW"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only OpenID button 1`] = `
Array [
  <div
    className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="LoginSocialButton__LinkButton-fvqpxH jbHYhW"
      type="openId"
    >
      <span
        className="loginIcon"
        style={
          Object {
            "lineHeight": "inherit",
          }
        }
      >
        <IconMock
          aria-hidden={true}
          className="icon"
          style={
            Object {
              "flexShrink": "0",
              "verticalAlign": "middle",
            }
          }
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL eMJBtW"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only SAML button 1`] = `
Array [
  <div
    className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="LoginSocialButton__LinkButton-fvqpxH jSIHk"
      type="saml"
    >
      <span
        className="loginIcon"
        style={
          Object {
            "lineHeight": "inherit",
          }
        }
      >
        <IconMock
          aria-hidden={true}
          className="icon"
          style={
            Object {
              "flexShrink": "0",
              "verticalAlign": "middle",
            }
          }
        />
      </span>
      <a
        href="/login-saml?_destination=http://localhost/"
        title="saml"
      >
        Saml
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL eMJBtW"
  />,
]
`;

exports[`<LoginSocialButtons /> renders without OR separator 1`] = `
Array [
  <div
    className="sc-bcXGCL eByFSh toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="LoginSocialButton__LinkButton-fvqpxH fuuYu"
      type="openId"
    >
      <span
        className="loginIcon"
        style={
          Object {
            "lineHeight": "inherit",
          }
        }
      >
        <IconMock
          aria-hidden={true}
          className="icon"
          style={
            Object {
              "flexShrink": "0",
              "verticalAlign": "middle",
            }
          }
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>,
]
`;
